--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.4.0",
     "chance": "^1.1.11",
+    "cloudinary": "^2.2.0",
     "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "font-awesome": "^4.7.0",
+    "fs": "^0.0.1-security",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
     "navigator": "^1.0.1",
