--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "13.2.4",
     "next-auth": "^4.22.1",
     "nodemailer": "^6.9.3",
+    "razorpay": "^2.9.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
